<resources>
    <string name="app_name">ExcelAPIApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">Sheet Select</string>
    <string name="second_fragment_label">Question</string>
    <string name="fragment_result">Result</string>
    <string name="file_sheet_create_fragment_label">File and Sheet Create</string>
    <string name="content_create_fragment_label">Vocabulary Add</string>
</resources>