<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.excelapiapp.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_fileSheetCreateFragment"
            app:destination="@id/fileSheetCreateFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.excelapiapp.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <argument
            android:name="sheetId"
            app:argType="integer"
            android:defaultValue="-1" />
        <action
            android:id="@+id/action_SecondFragment_to_resultFragment"
            app:destination="@id/resultFragment" >
<!--            <argument-->
<!--                android:name="totalCount" />-->
        </action>
        <action
            android:id="@+id/action_SecondFragment_to_contentCreateFragment"
            app:destination="@id/contentCreateFragment" />
    </fragment>
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.example.excelapiapp.ResultFragment"
        android:label="@string/fragment_result"
        tools:layout="@layout/fragment_result">
        <action
            android:id="@+id/action_resultFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <argument
            android:name="totalList"
            app:argType="string[]" />
        <argument
            android:name="totalScore"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>
    <fragment
        android:id="@+id/fileSheetCreateFragment"
        android:name="com.example.excelapiapp.fileadd.FileSheetCreateFragment"
        android:label="@string/file_sheet_create_fragment_label"
        tools:layout="@layout/fragment_file_sheet_create">
        <action
            android:id="@+id/action_fileSheetCreateFragment_to_contentCreateFragment"
            app:destination="@id/contentCreateFragment" />
    </fragment>
    <fragment
        android:id="@+id/contentCreateFragment"
        android:name="com.example.excelapiapp.fileadd.ContentCreateFragment"
        android:label="@string/content_create_fragment_label">
        <action
            android:id="@+id/action_contentCreateFragment_to_FirstFragment2"
            app:destination="@id/FirstFragment" />
        <argument
            android:name="FilePath"
            android:defaultValue="filepatherror"
            app:argType="string" />
        <argument
            android:name="SheetName"
            android:defaultValue="sheeterror"
            app:argType="string" />
    </fragment>
</navigation>